Proyecto1_Fase2/Cluster/nodejs1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-api-deployment
  namespace: sopes1-fase2
  labels:
    app: nodejs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-api
  template:
    metadata:
      labels:
        app: nodejs-api
    spec:
      containers:
      - name: node-app
        image: josue013/sopes1-nodejs-api:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /health  
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health  
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-service
  namespace: sopes1-fase2
  labels:
    app: nodejs-api
spec:
  selector:
    app: nodejs-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
