Proyecto1_Fase2/Cluster/python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api-deployment
  namespace: sopes1-fase2
  labels:
    app: python-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-api
  template:
    metadata:
      labels:
        app: python-api
    spec:
      containers:
      - name: flask-app
        image: josue013/sopes1-python-api:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /health  
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health 
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: python-api-service
  namespace: sopes1-fase2
  labels:
    app: python-api
spec:
  selector:
    app: python-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
